--- a/index.html
+++ b/index.html
@@ -40,10 +40,12 @@
 						<h2>Menu</h2>
 						<ul>
 							<li><a href="index.html">Home</a></li>
-							<li><a href="generic.html">Ipsum veroeros</a></li>
-							<li><a href="generic.html">Tempus etiam</a></li>
-							<li><a href="generic.html">Consequat dolor</a></li>
-							<li><a href="elements.html">Elements</a></li>
+							<li><a href="https://eshobin.github.io/TravelSpain/">Spain Travel Guide</a></li>
+							<li><a href="https://eshobin.github.io/WHSpage/">Walpole High Website</a></li>
+							<li><a href="https://eshobin.github.io/OnePager/">Bakery Page</a></li>
+							<li><a href="https://eshobin.github.io/e-groceries/">E-Groceries Page</a></li>
+							<li><a href="generic.html">Concertino in D Major</a></li>
+							<li><a href="elements.html">Animated Web Banner</a></li>
 						</ul>
 					</nav>
 
@@ -59,7 +61,7 @@
 									<span class="image">
 										<img src="images/spain.png" alt="spain image" />
 									</span>
-									<a href="generic.html">
+									<a href="https://eshobin.github.io/TravelSpain/">
 										<h2>Spain Travel Guide</h2>
 										<div class="content">
 											<p>This is my site on everything you need to know you are planning to travel to Spain. It includes insights into Spain's culture, travel destinations, and much more. Click here to check it out! </p>
@@ -70,7 +72,7 @@
 									<span class="image">
 										<img src="images/whs_page.png" alt="whs page image" />
 									</span>
-									<a href="generic.html">
+									<a href="https://eshobin.github.io/WHSpage/">
 										<h2>Walpole High Website</h2>
 										<div class="content">
 											<p>This is my site about walpole high school. It includes information about the school, sports, and its location. It also includes multiple links to the official website. Click here to check it out!</p>
@@ -81,7 +83,7 @@
 									<span class="image">
 										<img src="images/bakery_img_FINAL.png" alt="bakery page image" />
 									</span>
-									<a href="generic.html">
+									<a href="https://eshobin.github.io/OnePager/">
 										<h2>Bakery Page</h2>
 										<div class="content">
 											<p>This is my site on baking and includes some of my favorite recipies, popular baking posts, and a little about me. Click here to check it out!</p>
@@ -90,34 +92,34 @@
 								</article>
 								<article class="style4">
 									<span class="image">
-										<img src="images/pic04.jpg" alt="" />
+										<img src="images/w3css_img.png" alt="e-groceries image" />
 									</span>
-									<a href="generic.html">
-										<h2>Tempus</h2>
+									<a href="https://eshobin.github.io/e-groceries/">
+										<h2>E-Groceries Page</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>This is my w3css groceries site. It includes a few posts and information on upcoming sales and prices, as well as some new locations opening up soon. Click here to check it out!</p>
 										</div>
 									</a>
 								</article>
 								<article class="style5">
 									<span class="image">
-										<img src="images/concertino-img_FINAL.png" alt="" />
+										<img src="images/concertino-img_FINAL.png" alt="concertino image" />
 									</span>
 									<a href="generic.html">
-										<h2>Concertino in D Major</h2>
+										<h2>Kuchler's Concertino</h2>
 										<div class="content">
-											<p>This the piece I played for my violin Junior SEMSBA audition</p>
+											<p>This the piece I played for my violin Junior SEMSBA audition. Click here to check it out!</p>
 										</div>
 									</a>
 								</article>
 								<article class="style6">
 									<span class="image">
-										<img src="images/pic06.jpg" alt="" />
+										<img src="images/animatedBanner_img.png" alt="animated web banner image" />
 									</span>
-									<a href="generic.html">
-										<h2>Veroeros</h2>
+									<a href="images/creative_ad.gif">
+										<h2>Animated Web Banner</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>This is an animated advertisement I created using Adobe Animate. It advertises for a travel agency and limited offer. Click here to check it out!</p>
 										</div>
 									</a>
 								</article>
@@ -131,7 +133,7 @@
 							<section>
 								<h2>About Me</h2>
 								<p>My name is Elaina Shobin and I am a freshman at Walpole High School. These are some of my extracurriculars  &  achievements!<br>
-									I am on the WHS speeech & debate team.<br>I am on the WHS track team for the winter and spring seasons.<br>I am on the Teen Advisory Board for the Walpole Public Library.<br>I am also the head volunteer program assistant at the library.<br>I am on the Superintendent's Student Cabinet.<br>I am in the WHS Orchestra and I play the violin.<br>I have been playing the piano for 6 years and I am currently preparing for my Level 4 Royal Conservatory of Music exam.<br>In my event for speech and debate (Radio), I have broke finals at all four tournaments so far this year and have qualified for the state tournament 2 times<br>I won the JMS School Spelling Bee and competed at the state level.<br>I am on the WHS Girls Cross Country team and placed second at a meet last season.<br>	I have been learning Indian Classical Dance for the past 9 years and I have competed in and won multiple dance compeititons.<br>In middle school, I recived the Presidential Award for Academic Excellence and had the 10th highest GPA in my grade.<br>I am part of the Spanish Club.<br> I have competed at multiple Piano competitions and won gold.<br>I was on the Walpole Swim Team for 1 year.<br>I have competed at multiple singing competitions and placed third.<br>I have won multiple core value awards in middle school.<br>I am looking to join the WHS Math Team this year!
+									I am on the WHS speeech & debate team.<br>I am on the WHS track team for the winter and spring seasons.<br>I am on the Teen Advisory Board for the Walpole Public Library.<br>I am also the head volunteer program assistant at the library.<br>I am on the Superintendent's Student Cabinet.<br>I am in the WHS Orchestra and I play the violin.<br>I have been playing the piano for 6 years and I am currently preparing for my Level 4 Royal Conservatory of Music exam.<br>In my event for speech and debate (Radio), I have broke finals at all four tournaments so far this year and have qualified for the state tournament 2 times<br>I won the JMS School Spelling Bee and competed at the state level.<br>I am on the WHS Cross Country team and placed second at a meet last season.<br>	I have been learning Indian Classical Dance for the past 9 years and I have competed in and won multiple dance compeititons.<br>In middle school, I recived the Presidential Award for Academic Excellence and had the 10th highest GPA in my grade.<br>I am part of the Spanish Club.<br> I have competed at multiple Piano competitions and won gold.<br>I was on the Walpole Swim Team for 1 year.<br>I have competed at multiple singing competitions and placed.<br>I have won multiple core value awards in middle school.<br>I am looking to join the Math Team this year!
 								</p>
 								<h2>Get in touch</h2>
 								<form method="post" action="#">
@@ -156,12 +158,12 @@
 								<ul class="icons">
 									<li><a href="https://x.com/i/flow/login?redirect_after_login=%2Fwalpolehs" class="icon brands style2 fa-twitter"><span class="label">Twitter</span></a></li>
 									<li><a href="https://www.instagram.com/walpolehighschool/?hl=en" class="icon brands style2 fa-instagram"><span class="label">Instagram</span></a></li
-									<li><a href="https://github.com/eshobin/shobin" class="icon brands style2 fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="https://github.com/eshobin" class="icon brands style2 fa-github"><span class="label">GitHub</span></a></li>
 									<li><a href="https://mail.google.com/mail/u/0/#inbox?compose=GTvVlcSPFqvSFSxKJWTfqXMXwnQZLWRVCQTXRkSCLfzngDRxFCkPfwddgwDbdWrVbcLgDqBBcHBKj" class="icon solid style2 fa-envelope"><span class="label">Email</span></a></li>
 								</ul>
 							</section>
 							<ul class="copyright">
-								<li>&copy; Untitled. All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+								<li>&copy; Elaina S. WHS Web Design</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 							</ul>
 						</div>
 					</footer>
