--- a/index.html
+++ b/index.html
@@ -44,8 +44,11 @@
 							<li><a href="https://eshobin.github.io/WHSpage/">Walpole High Website</a></li>
 							<li><a href="https://eshobin.github.io/OnePager/">Bakery Page</a></li>
 							<li><a href="https://eshobin.github.io/e-groceries/">E-Groceries Page</a></li>
-							<li><a href="generic.html">Concertino in D Major</a></li>
-							<li><a href="elements.html">Animated Web Banner</a></li>
+							<li><a href="http://127.0.0.1:5501/images/concertino-img_FINAL.png">Concertino in D Major</a></li>
+							<li><a href="images/creative_ad.gif ">Animated Web Banner</a></li>
+							<li><a href="https://docs.google.com/presentation/d/1Asq1dRlCgAysJiZG34zQ4nFMgabWT0xoB1qKOGxX6nA/edit#slide=id.p">Lavallee Electric</a></li>
+							<li><a href="">Japan Travel Site</a></li>
+							<li><a href="">Animated Web Design</a></li>
 						</ul>
 					</nav>
 
@@ -105,7 +108,7 @@
 									<span class="image">
 										<img src="images/concertino-img_FINAL.png" alt="concertino image" />
 									</span>
-									<a href="generic.html">
+									<a href="http://127.0.0.1:5501/images/concertino-img_FINAL.png">
 										<h2>Kuchler's Concertino</h2>
 										<div class="content">
 											<p>This the piece I played for my violin Junior SEMSBA audition. Click here to check it out!</p>
@@ -123,7 +126,40 @@
 										</div>
 									</a>
 								</article>
-							</section>
+								<article class="style7">
+									<span class="image">
+										<img src="images/lavallee_electric.png" alt="lavallee electric image" />
+									</span>
+									<a href="https://docs.google.com/presentation/d/1Asq1dRlCgAysJiZG34zQ4nFMgabWT0xoB1qKOGxX6nA/edit#slide=id.p">
+										<h2>Lavallee Electric</h2>
+										<div class="content">
+											<p>This is a redesigned website we created using Bootstrap. We redesigned Lavallee Electric. Click here to check out the before and after!</p>
+										</div>
+									</a>
+								</article>
+							<article class="style8">
+								<span class="image">
+									<img src="images/japan_travel_image.png" alt="travel japan image" />
+								</span>
+								<a href=" ">
+									<h2>Japan Travel Site</h2>
+									<div class="content">
+										<p>This is a website consisting of information about Japan's geography, wildlife, culture and more. Click here to check it out!</p>
+									</div>
+								</a>
+							</article>
+							<article class="style9">
+								<span class="image">
+									<img src="images/flowers_website_image.png" alt="flowers website image" />
+								</span>
+								<a href=" ">
+									<h2>All About Flowers</h2>
+									<div class="content">
+										<p>This is a website consisting of information about the mannerisms of flowers and the process of pollination. Click here to check it out!</p>
+									</div>
+								</a>
+							</article>
+						</section>
 						</div>
 					</div>
 
@@ -133,7 +169,7 @@
 							<section>
 								<h2>About Me</h2>
 								<p>My name is Elaina Shobin and I am a freshman at Walpole High School. These are some of my extracurriculars  &  achievements!<br>
-									I am on the WHS speeech & debate team.<br>I am on the WHS track team for the winter and spring seasons.<br>I am on the Teen Advisory Board for the Walpole Public Library.<br>I am also the head volunteer program assistant at the library.<br>I am on the Superintendent's Student Cabinet.<br>I am in the WHS Orchestra and I play the violin.<br>I have been playing the piano for 6 years and I am currently preparing for my Level 4 Royal Conservatory of Music exam.<br>In my event for speech and debate (Radio), I have broke finals at all four tournaments so far this year and have qualified for the state tournament 2 times<br>I won the JMS School Spelling Bee and competed at the state level.<br>I am on the WHS Cross Country team and placed second at a meet last season.<br>	I have been learning Indian Classical Dance for the past 9 years and I have competed in and won multiple dance compeititons.<br>In middle school, I recived the Presidential Award for Academic Excellence and had the 10th highest GPA in my grade.<br>I am part of the Spanish Club.<br> I have competed at multiple Piano competitions and won gold.<br>I was on the Walpole Swim Team for 1 year.<br>I have competed at multiple singing competitions and placed.<br>I have won multiple core value awards in middle school.<br>I am looking to join the Math Team this year!
+									I am on the WHS speeech & debate team.<br>I am on the WHS track team for the winter and spring seasons.<br>I am on the Teen Advisory Board for the Walpole Public Library.<br>I am also the head volunteer program assistant at the library.<br>I am on the Superintendent's Student Cabinet.<br>I am in the WHS Orchestra and I play the violin.<br>I have been playing the piano for 6 years and I am currently preparing for my Level 4 Royal Conservatory of Music exam.<br>In my event for speech and debate (Radio), I have broke finals at all tournaments this year and have qualified for the state tournament 2 times<br>I won the JMS School Spelling Bee and competed at the state level. I also competed in and won the top novice award at States.<br>I am on the WHS Cross Country team and placed second at a meet last season.<br>	I have been learning Indian Classical Dance for the past 9 years and I have competed in and won multiple dance compeititons.<br>In middle school, I recived the Presidential Award for Academic Excellence and had the 10th highest GPA in my grade.<br>I am part of the Spanish Club.<br> I have competed at multiple Piano competitions and won gold.<br>I was on the Walpole Swim Team for 1 year.<br>I have competed at multiple singing competitions and placed.<br>I have won multiple core value awards in middle school.<br>I am looking to join the Math Team this year!
 								</p>
 								<h2>Get in touch</h2>
 								<form method="post" action="#">
