--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 								<span class="image">
 									<img src="images/japan_travel_image.png" alt="travel japan image" />
 								</span>
-								<a href=" ">
+								<a href="https://eshobin.github.io/japan-travel-website/index.html">
 									<h2>Japan Travel Site</h2>
 									<div class="content">
 										<p>This is a website consisting of information about Japan's geography, wildlife, culture and more. Click here to check it out!</p>
@@ -152,7 +152,7 @@
 								<span class="image">
 									<img src="images/flowers_website_image.png" alt="flowers website image" />
 								</span>
-								<a href=" ">
+								<a href="https://eshobin.github.io/all-about-flowers/">
 									<h2>All About Flowers</h2>
 									<div class="content">
 										<p>This is a website consisting of information about the mannerisms of flowers and the process of pollination. Click here to check it out!</p>
